# Linux-Light-Dip-Detector

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: periodTimer.h  sampler.h  udpServer.h
app/src/: main.c  periodTimer.c  sampler.c  udpServer.c
hal/include/hal/: halManager.h  potDriver.h  pwmLed.h  segDisplay.h  sensorDriver.h
hal/src/: halManager.c  potDriver.c  pwmLed.c  segDisplay.c  sensorDriver.c
